azure/resources/nsg_template.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
  "contentVersion": "1.0.0.0",
  "parameters" : {
  },  

  "variables": {
    "apiVersion": "2016-12-01",
    "nsgName": "pcoipAgentNsg"
  },

  "resources": [
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsgName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "NSG - PCoIP Agent"
      },

      "properties": {
        "securityRules": [
          {
            "name": "rdp-rule",
            "properties": {
              "description": "Allow RDP Session",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "INTERNET",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "pcoip-rule-1",
            "properties": {
              "description": "Allow PCoIP Broker Protocol",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "INTERNET",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "pcoip-rule-2",
            "properties": {
              "description": "Allow PCoIP Session",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "4172",
              "sourceAddressPrefix": "INTERNET",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 201,
              "direction": "Inbound"
            }
          },
          {
            "name": "pcoip-rule-3",
            "properties": {
              "description": "Allow PCoIP Diagnostics Traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "60443",
              "sourceAddressPrefix": "INTERNET",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 202,
              "direction": "Inbound"
            }
          }
        ]
      }
    }
  ]
}
